fix: Loading spinner is not centered when searching APIs on the management part
This closes gravitee-io/issues#1717

--- a/src/index.scss
+++ b/src/index.scss
@@ -557,6 +557,7 @@ table {
 }
 
 md-progress-circular {
+  display: inline-block;
   position: absolute;
   top: 200px;
 }
